[package]
name = "tlash"
description = "A Clash(Clash.Meta) client wriiten in rust, egui"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
eframe = "0.22.0"
# pollster = { version = "0.3.0", features = ["macro"] }
tokio = { version = "1.35.1", features = ["full"] }
clash_api = { version = "0.1.0" }
